misc (switching to dev)
-started to add tests
-fixed minor syntax and type errors
-more clearly defined mrt format
-additions to parse_minimal

This builds, but is *not* meaningfully functional at the moment. Further work will be pushed to the dev branch for now.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ ndarray = "0.11"
 #openblas-src = { version = "0.5", default-features = false, features = ["cblas", "system"] }
 bytes = "0.4"
 geo = "0.7.4"
+regex = "0.2"
+lazy_static = "1.0"
