--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,15 @@
 sudo: required
 
-
 language: rust
-
-
 
 rust:
   - stable
   - beta
   - nightly
 
-
-
 matrix:
   allow_failures:
     - rust: nightly
-
-
-
-services:
-  - docker
-
-
-
-script:
-- make test-docker-env
-
-
 
 cache:
     apt: true
@@ -34,20 +17,9 @@ cache:
         - target/debug/deps
         - target/debug/build
 
-
-
-addons:
-  apt:
-    packages:
-      - libcurl4-openssl-dev
-      - libelf-dev
-      - libdw-dev
-
-
-
 after_success: |
-    [ $TRAVIS_RUST_VERSION = stable ] &&
-    wget https://github.com/shaneutt/kcov/archive/master.tar.gz &&
-    tar xzf master.tar.gz && mkdir kcov-master/build && cd kcov-master/build && cmake .. && make && make install DESTDIR=../tmp && cd ../.. &&
-    ls target/debug &&
-    ./kcov-master/tmp/usr/local/bin/kcov –coveralls-id=$TRAVIS_JOB_ID –exclude-pattern=/.cargo target/kcov target/debug/riak-*
+  sudo apt-get install libcurl4-openssl-dev libelf-dev libdw-dev &&
+  wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
+  tar xzf master.tar.gz && mkdir kcov-master/build && cd kcov-master/build && cmake .. && make &&
+  sudo make install && cd ../.. &&
+  kcov --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/kid-*
