--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ cache:
         - target/debug/build
 
 after_success: |
-  sudo apt-get install libcurl4-openssl-dev libelf-dev libdw-dev &&
+  sudo apt-get install libcurl4-openssl-dev libelf-dev libdw-dev cmake gcc binutils-dev libiberty-dev zlib1g-dev &&
   wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
   tar xzf master.tar.gz && mkdir kcov-master/build && cd kcov-master/build && cmake .. && make &&
   sudo make install && cd ../.. &&
