--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,27 @@
+sudo: required
+
 language: rust
+
 rust:
   - stable
   - beta
   - nightly
 
-sudo: true
-
-before_install:
-  - sudo apt-get update
-
 matrix:
   allow_failures:
     - rust: nightly
-  fast_finish: true
 
-cache: cargo
+services:
+  - docker
+
+script:
+- make test-docker-env
+
+cache:
+    apt: true
+    directories:
+        - target/debug/deps
+        - target/debug/build
 
 addons:
   apt:
@@ -22,22 +29,10 @@ addons:
       - libcurl4-openssl-dev
       - libelf-dev
       - libdw-dev
-      - cmake
-      - gcc
-      - binutils-dev
-      - libiberty-dev
 
 after_success: |
-  wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
-  tar xzf master.tar.gz &&
-  cd kcov-master &&
-  mkdir build &&
-  cd build &&
-  cmake .. &&
-  make &&
-  make install DESTDIR=../../kcov-build &&
-  cd ../.. &&
-  rm -rf kcov-master &&
-  for file in target/debug/examplerust-*[^\.d]; do mkdir -p "target/cov/$(basename $file)"; ./kcov-build/usr/local/bin/kcov --exclude-pattern=/.cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file"; done &&
-  bash <(curl -s https://codecov.io/bash) &&
-  echo "Uploaded code coverage"
+    [ $TRAVIS_RUST_VERSION = stable ] &&
+    wget https://github.com/shaneutt/kcov/archive/master.tar.gz &&
+    tar xzf master.tar.gz && mkdir kcov-master/build && cd kcov-master/build && cmake .. && make && make install DESTDIR=../tmp && cd ../.. &&
+    ls target/debug &&
+    ./kcov-master/tmp/usr/local/bin/kcov –coveralls-id=$TRAVIS_JOB_ID –exclude-pattern=/.cargo target/kcov target/debug/kid-*
