--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,8 @@ addons:
 
 after_success: |
     [ $TRAVIS_RUST_VERSION = stable ] &&
+    sudo apt-get install cmake g++ pkg-config &&
+    sudo apt-get install libcurl4-openssl-dev libdw-dev binutils-dev libiberty-dev &&
     cargo install cargo-kcov &&
+    cargo kcov --print-install-kcov-sh | sh &&
     cargo kcov --coveralls $TRAVIS_JOB_ID
