--- a/.travis.yml
+++ b/.travis.yml
@@ -11,23 +11,25 @@ matrix:
   allow_failures:
     - rust: nightly
 
-cache:
-    apt: true
-    directories:
-        - target/debug/deps
-        - target/debug/build
+#cache:
+#    apt: true
+#    directories:
+#        - target/debug/deps
+#        - target/debug/build
 
 addons:
   apt:
-    packages:
+    packages: # all of these are for kcov.
+      - cmake
+      - g++
+      - pkg-config
       - libcurl4-openssl-dev
-      - libelf-dev
       - libdw-dev
+      - binutils-dev
+      - libiberty-dev
 
 after_success: |
     [ $TRAVIS_RUST_VERSION = stable ] &&
-    sudo apt-get install cmake g++ pkg-config &&
-    sudo apt-get install libcurl4-openssl-dev libdw-dev binutils-dev libiberty-dev &&
     cargo install cargo-kcov &&
     cargo kcov --print-install-kcov-sh | sh &&
     cargo kcov --coveralls $TRAVIS_JOB_ID
