--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,8 @@ addons:
 
 after_success: |
     [ $TRAVIS_RUST_VERSION = stable ] &&
+    wget https://github.com/shaneutt/kcov/archive/master.tar.gz &&
+    tar xzf master.tar.gz && mkdir kcov-master/build && cd kcov-master/build && cmake .. && make && make install DESTDIR=../tmp && cd ../.. &&
+    ls target/debug &&
     cargo install cargo-kcov &&
     cargo kcov --coveralls $TRAVIS_JOB_ID
