--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ addons:
 
 # Run builds for all the supported trains
 rust:
-  - nightly
-  - beta
   - stable
+  - beta
+  - nightly
 
 # Load travis-cargo
 before_script:
@@ -32,26 +32,17 @@ before_script:
 # The main build
 script:
   - |
-      if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      echo building &&
-      travis-cargo build &&
-      echo testing &&
-      travis-cargo test &&
-      echo benching &&
-      travis-cargo bench;
-      fi
-  - |
-      if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       cargo build &&
-      cargo test &&
+      cargo test --verbose &&
       cargo bench;
-      fi
+
 # Send coverage reports and upload docs
 after_success:
   - |
       if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       travis-cargo --only stable coveralls --no-sudo --verify;
       fi
+
 env:
   global:
     - TRAVIS_CARGO_NIGHTLY_FEATURE=""
