--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,9 @@ rust:
   - beta
   - nightly
 
+before_install:
+- wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz
+
 install:
 - tar xzf master.tar.gz
 - cd kcov-master
