--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,27 @@
-# from https://github.com/FractalGlobal/ntru-rs/blob/master/.travis.yml
+sudo: false
 
 language: rust
-cache: cargo
-dist: trusty
-sudo: false
-os:
-  - linux
-  - osx
-addons:
-  apt:
-    packages:
-      - libcurl4-openssl-dev
-      - libelf-dev
-      - libdw-dev
-      - binutils-dev
-
-# Run builds for all the supported trains
 rust:
   - stable
   - beta
   - nightly
+os:
+  - linux
+  - osx
+cache:
+  - cargo
+  - apt
+addons:
+  apt:
+    packages:
+      - binutils-dev
+      - libcurl4-openssl-dev
+      - libelf-dev
+      - libdw-dev
+
+
+env:
+- PATH=${PATH}:${HOME}/kcov/bin
 
 before_install:
 - wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz
@@ -36,35 +38,14 @@ install:
 - rm -rf kcov-master
 - mkdir -p coverage
 
-# Load travis-cargo
-#before_script:
-#  - |
-#      if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-#      pip install git+https://github.com/FractalGlobal/travis-cargo.git@fix-coveralls --user &&
-#      export PATH=$HOME/.local/bin:$PATH
-#      fi
-
-# The main build
 script:
-  - |
-      cargo build &&
-      cargo test --verbose &&
-      cargo bench;
+- cargo build
+- cargo test
+- cargo bench
 
-# Send coverage reports and upload docs
 after_success:
-  - |
-      if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      kcov --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/kid-*
+- |
+      if [ "$TRAVIS_OS_NAME" == "linux"] && [ "$TRAVIS_OS_NAME" == "stable" ] then
+        kcov --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/kid-*
+        bash <(curl -s https://codecov.io/bash)
       fi
-
-env:
-  global:
-    - TRAVIS_CARGO_NIGHTLY_FEATURE=""
-
-notifications:
-  email:
-    recipients:
-      - dominicburkart@gmail.com
-    on_success: change
-    on_failure: always
