--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
-sudo: false
+sudo: required
+
+services:
+  - docker
 os:
   - linux
-  - osx
+#  - osx //
 language: rust
 rust:
   - stable
@@ -21,23 +24,15 @@ addons:
 env:
 - PATH=${PATH}:${HOME}/kcov/bin
 
-before_install:
-- wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz
-install:
-- tar xzf master.tar.gz
-- cd kcov-master
-- mkdir build
-- cd build
-- cmake -DCMAKE_INSTALL_PREFIX=${HOME}/kcov ..
-- make
-- make install
-- cd ../..
-- rm -rf kcov-master
-- mkdir -p coverage
+before_install: # todo: make this conditional to allow builds on osx too
+- docker pull ragnaroek/kcov:vXX
+- docker run --security-opt seccomp=unconfined -v $(pwd):/source kcov:v33
+
 script:
 - cargo build
 - cargo test
 - cargo bench
+
 after_success:
 - kcov --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/kid-*
 - bash <(curl -s https://codecov.io/bash)
