--- a/.travis.yml
+++ b/.travis.yml
@@ -20,17 +20,11 @@ addons:
       - libelf-dev
       - libdw-dev
 
-env:
-- PATH=${PATH}:${HOME}/kcov/bin
-
-before_install:
-- docker pull ragnaroek/kcov:v31
-
 script:
 - cargo build
 - cargo test
 - cargo bench
 
-after_success:
-- docker run --security-opt seccomp=unconfined -v $(pwd):/source ragnaroek/kcov:v33 --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/kid-*
+after_success: # - mkdir target/kcov
+- docker run -it --rm --security-opt seccomp=unconfined -v $(pwd):/source ragnaroek/kcov:v33 --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/kid-*
 - bash <(curl -s https://codecov.io/bash)
