--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,5 @@ script:
 - cargo bench
 
 after_success: # - mkdir target/kcov
-- docker run -it --rm --security-opt seccomp=unconfined -v $(pwd):/source ragnaroek/kcov:v33 --coveralls-id=$TRAVIS_JOB_ID --include-pattern=kid target/kcov target/debug/kid-*
+- docker run -it --rm --security-opt seccomp=unconfined -v $(pwd):/source ragnaroek/kcov:v33 --coveralls-id=$TRAVIS_JOB_ID --include-pattern=kid target/kcov target/debug/kid-*/*
 - bash <(curl -s https://codecov.io/bash)
