--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,9 @@ script:
 - cargo test
 #- cargo bench
 
-after_success: # - mkdir target/kcov
-- docker run -it --rm --security-opt seccomp=unconfined ragnaroek/kcov:v33 --coveralls-id=$TRAVIS_JOB_ID --include-pattern=kid target/kcov target/debug/*
+after_success:
+- cargo install cargo-kcov
+- cargo kcov --print-install-kcov-sh | sh
+- cargo kcov --coveralls
+# - docker run -it --rm --security-opt seccomp=unconfined ragnaroek/kcov:v33 --coveralls-id=$TRAVIS_JOB_ID --include-pattern=kid target/kcov target/debug/kid-*
 - bash <(curl -s https://codecov.io/bash)
