--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 sudo: required
 
-os: linux
+os:
+  - linux
+  - osx
 language: rust
 rust:
   - stable
@@ -11,20 +13,12 @@ cache:
   - apt
 addons:
   apt:
-    packages:
+    packages: # all reqs for kcov
       - binutils-dev
       - libcurl4-openssl-dev
       - libelf-dev
       - libdw-dev
 
 script:
-- cargo build
-- cargo bench
-- cargo test
-- |
-      if [ [ "$TRAVIS_OS_NAME" == "linux"] && [ "$TRAVIS_OS_NAME" == "stable" ] ]; then
-        cargo install cargo-kcov
-        cargo kcov --print-install-kcov-sh | sh
-        cargo run -- kcov --verbose --no-clean-rebuild --lib --coveralls
-        bash <(curl -s https://codecov.io/bash)
-      fi
+  - cargo build
+  - if [[ $TRAVIS_OS_NAME = linux ]]; then cargo install cargo-kcov; cargo kcov --print-install-kcov-sh | sh; travis_wait cargo kcov --verbose --lib --coveralls; bash <(curl -s https://codecov.io/bash); else travis_wait cargo test; fi
