--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,10 @@ addons:
       - libelf-dev
       - libdw-dev
 
+install:
+    - rustc -vV
+    - cargo -vV
+
 script:
   - cargo build
   - if [[ $TRAVIS_OS_NAME = linux ]]; then cargo install cargo-kcov; cargo kcov --print-install-kcov-sh | sh; travis_wait cargo kcov --verbose --lib --coveralls; bash <(curl -s https://codecov.io/bash); else travis_wait cargo test; fi
