--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ geo = "0.7.4"
 regex = "0.2"
 lazy_static = "1.0"
 kodama = "0.2.1"
+fast_text = "0.1.1"
+diesel = { version = "1.3", features = ["postgres"] }
