--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ quick-error = "*"
 #openblas-src = { version = "0.5", default-features = false, features = ["cblas", "system"] }
 bytes = "0.4"
 geo = "0.7.4"
-regex = "1"
-lazy_static = "1"
+regex = "1.*"
+lazy_static = "1.*"
 kodama = "0.2.1"
-fast_text = "0.1.1"
+fast_text = "0.1.2"
 diesel = { version = "1.3", features = ["postgres"] }
 cute = "0.3.0"
