--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ regex = "1.*"
 lazy_static = "1.*"
 kodama = "0.2.1"
 fast_text = "0.1.2"
+funfun = "0.2.2"
 diesel = { version = "1.3", features = ["postgres"] }
 cute = "0.3.0"
